--- a/Obligatorisk/background.css
+++ b/Obligatorisk/background.css
@@ -1,5 +1,9 @@
 /* Example 1: Setting a solid background color */
 body {
-  background-color: rgb(249, 139, 211);
-}
 
+  background-color: coral;
+}
+h1 {
+  text-align: center;
+
+}
