--- a/background.css
+++ b/background.css
@@ -4,7 +4,7 @@
   background-color: coral;
 }
 h1 {
-  color:emerald;
+  color:pink;
   font-family:Arial, Helvetica, sans-serif;
   text-align: center;
 
