--- a/background.css
+++ b/background.css
@@ -1,10 +1,15 @@
 /* Example 1: Setting a solid background color */
 body {
-
-  background-color: lightblue;
+  background-color: coral;
 }
 h1 {
   color:pink;
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: center;
+
+}
+h2 {
+  color:blue;
   font-family:Arial, Helvetica, sans-serif;
   text-align: center;
 
