--- a/background.css
+++ b/background.css
@@ -1,15 +1,15 @@
 /* Example 1: Setting a solid background color */
 body {
-  background-color: coral;
+  background-color: rgb(255, 149, 236);
 }
 h1 {
-  color:pink;
+  color:rgb(107, 145, 107);
   font-family:Arial, Helvetica, sans-serif;
   text-align: center;
 
 }
 h2 {
-  color:blue;
+  color:rgb(153, 153, 236);
   font-family:Arial, Helvetica, sans-serif;
   text-align: center;
 
